添加了动态彩带和建站时间的美化

--- a/source/_posts/博客美化自述.md
+++ b/source/_posts/博客美化自述.md
@@ -120,3 +120,47 @@ valine:
 ```
 ## 页面效果
 ![发表评论](comments.png)
+
+# 其他插件
+这部分插件通常需要用到额外的 js/css 文件，需要添加到 `source/js` 文件夹中
+> 所有这部分文件都可以在[博客原始 repo ](https://github.com/duhaode520/duhaode520.github.io)的 source 文件夹中找到
+## 添加主页创建时间
+在 `_config.fluid.yml` 中找到 `footer` 进行添加
+```yml
+footer:
+  # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
+  # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
+  content: '
+    <div>
+      <span id="timeDate">载入天数...</span>
+      <span id="times">载入时分秒...</span>
+      <script src="/js/duration.js"></script>
+    </div>
+```
+
+然后创建文件 `source/js/duration.js`，其中内容如下：
+```javascript
+var now = new Date();
+function createtime() {
+    var grt= new Date("03/10/2023 00:00:00");//在此处修改你的建站时间，格式：月/日/年 时:分:秒
+    now.setTime(now.getTime()+250);
+    days = (now - grt ) / 1000 / 60 / 60 / 24; dnum = Math.floor(days);
+    hours = (now - grt ) / 1000 / 60 / 60 - (24 * dnum); hnum = Math.floor(hours);
+    if(String(hnum).length ==1 ){hnum = "0" + hnum;} minutes = (now - grt ) / 1000 /60 - (24 * 60 * dnum) - (60 * hnum);
+    mnum = Math.floor(minutes); if(String(mnum).length ==1 ){mnum = "0" + mnum;}
+    seconds = (now - grt ) / 1000 - (24 * 60 * 60 * dnum) - (60 * 60 * hnum) - (60 * mnum);
+    snum = Math.round(seconds); if(String(snum).length ==1 ){snum = "0" + snum;}
+    document.getElementById("timeDate").innerHTML = "本站已安全运行 "+dnum+" 天 ";
+    document.getElementById("times").innerHTML = hnum + " 小时 " + mnum + " 分 " + snum + " 秒";
+}
+setInterval("createtime()",250);
+```
+
+## 动态彩带
+首先在 `_config.fluid.yml` 中找到 `custom.js` 进行添加:
+```yml
+custom_js:
+  - /js/DynamicRobbin.js
+```
+
+然后添加文件 `source/js/DynamicRobbin.js`，在项目repo中直接拷贝即可：https://github.com/duhaode520/duhaode520.github.io/tree/main/source/js/DynamicRobbin.js  
